minor fixes and fix issue viewer size on safari

--- a/app/src/components/about/about.css
+++ b/app/src/components/about/about.css
@@ -37,7 +37,6 @@
 
 @media only screen and (max-width: 800px) { 
   .about-panel {
-    min-width: 0;
     height: auto;
     max-height: none;
     flex-direction: column;
