--- a/app/src/components/issues/issues.css
+++ b/app/src/components/issues/issues.css
@@ -55,7 +55,7 @@
 }
 .issue-viewer {
   width: 66%;
-  min-height: 440px;
+  height: 440px;
   margin-top: 95px;
   margin-bottom: 20px;
 }
@@ -89,7 +89,6 @@
   }
   .issue-viewer {
     width: 100%;
-    height: 440px;
     margin-top: 20px;
     margin-bottom: 0;
     order: 1;
